# CPS_API

./: .gitignore  .gitignore.txt  CPS_API项目代码说明.md  参数核对.md
API_LaserTrackerSDK_v7.18.0.0_Windows_MFC_cpp/: README.md
API_LaserTrackerSDK_v7.18.0.0_Windows_MFC_cpp/document/: LaserTrackerInterfaceDocument.chm  LaserTrackerInterfaceDocument.chw
API_LaserTrackerSDK_v7.18.0.0_Windows_MFC_cpp/include/api/: LaserTrackerInterface.h  LaserTrackerTypes.h
API_LaserTrackerSDK_v7.18.0.0_Windows_MFC_cpp/lib/: libltinterface.lib
API_LaserTrackerSDK_v7.18.0.0_Windows_MFC_cpp/sample_code_cmake/: AccessoryOperations.cpp  BasicOperations.cpp  CMakeLists.txt  Common.h  ContinuousAutomatedMeasurements.cpp  DataCollection.cpp
API_LaserTrackerSDK_v7.18.0.0_Windows_MFC_cpp/sample_code_mfc/: LaserTrackerTester.sln
API_LaserTrackerSDK_v7.18.0.0_Windows_MFC_cpp/sample_code_mfc/LaserTrackerTester/: LaserTrackerTester.aps  LaserTrackerTester.cpp  LaserTrackerTester.h  LaserTrackerTester.rc  LaserTrackerTester.vcxproj  LaserTrackerTester.vcxproj.filters  LaserTrackerTesterDlg.cpp  LaserTrackerTesterDlg.h  VideoStreamDlg.cpp  VideoStreamDlg.h  main.cpp  resource.h
SenpecKinematicsPoseTracker/: 60584.prm  60584_2.prm  API跟踪仪核心头文件功能函数解读.docx  SenpecKinematicsPoseTracker.sln  SenpecKinematicsPoseTracker.vcxproj  SenpecKinematicsPoseTracker.vcxproj.filters  config.json  measurements1.csv  measurements2.csv  measurements3.csv  vcpkg.json  代理启动vs.bat
SenpecKinematicsPoseTracker/include/: App.h
SenpecKinematicsPoseTracker/include/core/: AlignmentSolver.h  DigitalTwinPublisher.h  MeasurementStore.h  OperationLogger.h  TrackerDevice.h
SenpecKinematicsPoseTracker/include/ui/: UiLayer.h
SenpecKinematicsPoseTracker/resources/: LogoImage.h  LogoImage1.h  convert.py
SenpecKinematicsPoseTracker/src/: App.cpp  main.cpp
SenpecKinematicsPoseTracker/src/core/: AlignmentSolver.cpp  DigitalTwinPublisher.cpp  MeasurementStore.cpp  OperationLogger.cpp  TrackerDevice.cpp
matlab程序/: gen_markerdata_V3.m  laser_tracker_data.mat  matlab_model_analysis_report.html  measurements - 副本.csv  measurements1.csv  simulation_mapping_ik_v1.m
(+243 files in other folders)
